
2.0.63
UTIL:
* type=securityprofile | introduce process of DataFilteringProfileStore
* type=address/rule actions=description-Replace-Character | add variable $$forwardslash$$ and $$colon$$
* create_vwire.php | update to use JSON file
* develop get_counter.php | fix to get newest information from website
* util develop - extend display-xpath-for-node-filter.php with argument 'nameattribute=XYZ'

BUGFIX:
* type=address actions=move | bugfix for Firewall config type
* type=diff | bugfix to display changes in same single XMLnode without child node correctly

GENERAL
* update App-ID version: 8632-7647


2.0.62 (20221010)
UTIL:
* type=rule | introduce 'actions=user-replace:OLD-username,NEW-username' and 'actions=user-replace-from-file:FILE.txt'
* type=rule | implement group-tag usage for actions=display / 'filter=grouptag is TAGNAME'
* type=device  actions=sp_spg-create-alert-only-bp:true | ironskillet update for panos 10.2
* type=rule | introduce actions=rule-hit-count-show / rule-hit-count-clear

BUGFIX:
* type=rule/schedule 'filter=(schedule.expire.in.days > -90) / (expire.in.days > -90) | bugfix for negative numbers

GENERAL:


2.0.61 (20221004)
UTIL:
* type=rule | introduce 'filter=(url.category.count ><=! NUMBER)'
* type=address | improve "help create-address" - improve also actions=display

BUGFIX:
* class Panorama/Pan/FawkesConf - save_to_file set indentingXmlIncreament to default without an encrease with +1
* type=device actions=sp_spg-create-bp:false | if no name argument is defined 'sp_spg-create-bp:[shared], sp-name' use predefined array
* class RulewithUserID - bugfix for known-user

GENERAL:
* improve classes BuckbeackConf / FawkesConf - to avoid creating XML node if not needed
* extend class Container/DeviceCloud/DeviceOnPrem with DataFilteringProfileStore


2.0.60 (20220926)
UTIL:
* develop ssh-connector | introduce argument password
* type=rule actions=description-append | introduce $$current.name$$ a stringformular


2.0.59 (20220924)
UTIl: